<resources>
    <string name="app_name">French Survival Phrases</string>
    <string name="action_settings">Settings</string>
    <string name="action_recent">Recent</string>
    <string name="subject_mail_feedback">[French] Survival Guide feedback</string>
    <string name="speaker">Speak</string>

    <string name="hello_world">Hello world!</string>

    <string name="title_activity_list_topic">ListTopic</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_base">BaseActivity</string>
    <string name="Learn">Learn</string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="feed_back">Feedback</string>
    <string name="remove_ad">Remove Ad</string>

    <string name="More_apps">More apps</string>
    <string name="meeting">Meeting</string>
    <string name="restaurant">Restaurant</string>
    <string name="direction">Direction</string>
    <string name="shopping">Shopping</string>
    <string name="weather">Weather</string>
    <string name="socializing">Socializing</string>
    <string name="hotel">Hotel  </string>
    <string name="daily">Daily</string>
    <string name="please_click_back_again_to_exit">Press once again to exit !</string>
    <string name="no_recent">No recent list found</string>
    <string name="detail">Detail</string>

    <string-array name="tabs">
        <item>All</item>
        <item>Recent</item>    </string-array>
</resources>
